--- a/index.html
+++ b/index.html
@@ -80,6 +80,14 @@
       a[style*="color:var(--gold)"] { /* Specific override for mailto link */
           color: var(--heading-color) !important;
       }
+      .mini-ribbon-btn {
+        background-color: var(--button-text); /* White */
+        color: var(--gold); /* Pink */
+      }
+      .mini-ribbon-btn:hover {
+        background-color: #E0E6F0; /* Light grey hover for white button */
+        color: var(--gold);
+      }
     }
 
     /* General Body Styles */
@@ -151,26 +159,55 @@
       position: absolute;
       right: -40px;
       top: 18px;
-      background: linear-gradient(90deg, #FF6EC7, #87CEEB); /* Pink to Sky Blue */
+      background: linear-gradient(90deg, var(--color-one), var(--color-two)); /* Pink to Sky Blue */
       padding: 8px 12px;
       transform: rotate(45deg);
       font-weight: 800;
       border-radius: 6px;
       box-shadow: 0 6px 18px rgba(0, 0, 0, 0.45);
-      overflow: hidden;
-      white-space: nowrap;
       z-index: 10;
-      color: var(--ribbon-text); /* Ensure contrast */
+      color: var(--ribbon-text);
+      display: flex; /* Make it a flex container */
+      align-items: center; /* Vertically align items */
+      box-sizing: border-box; /* Include padding in width */
+    }
+    .premium-ribbon .marquee-content { /* New wrapper for scrolling text */
+      flex-grow: 1; /* Allow content to take up available space */
+      overflow: hidden; /* This will clip the scrolling text */
+      white-space: nowrap; /* Keep text on one line for the marquee */
+      margin-right: 8px; /* Space between marquee and button */
+      line-height: 1; /* Ensure consistent line height */
     }
     .premium-ribbon .marquee {
       display: inline-block;
       padding-left: 100%;
       animation: marquee 12s linear infinite;
-      color: var(--ribbon-text); /* Ensure contrast */
+      color: var(--ribbon-text);
+      font-size: 0.9em; /* Make text a bit smaller */
     }
     @keyframes marquee {
       0% { transform: translateX(0%); }
       100% { transform: translateX(-100%); }
+    }
+
+    /* New mini button styles */
+    .mini-ribbon-btn {
+      background-color: var(--button-text); /* White in dark mode, white in light mode */
+      color: var(--gold); /* Pink accent color */
+      border: none;
+      padding: 4px 10px;
+      border-radius: 5px;
+      font-weight: 700;
+      font-size: 0.7em; /* Even smaller font */
+      cursor: pointer;
+      transition: background-color 0.2s ease, color 0.2s ease;
+      flex-shrink: 0; /* Prevent button from shrinking */
+      line-height: 1; /* Tighter text */
+      box-shadow: 0 1px 4px rgba(0,0,0,0.2);
+    }
+    .mini-ribbon-btn:hover {
+      background-color: var(--text-primary); /* Slightly change on hover */
+      color: var(--gold);
     }
 
     /* Main Layout Container */
@@ -243,18 +280,7 @@
         display: inline-block;
         box-shadow: 0 1px 4px rgba(0,0,0,0.08);
     }
-    /* Demos container for subtle separation */
-    .card .demo-items {
-        margin-bottom: 20px; /* Space between last demo and button */
-    }
-    .card .demo-items p {
-        font-size: 0.95em;
-        padding: 6px 10px;
-        margin-bottom: 8px; /* Slightly less space between demo paragraphs */
-    }
-    .card .demo-items p:last-child {
-        margin-bottom: 0; /* Remove bottom margin for the last demo p if inside .demo-items */
-    }
+    /* Removed .card .demo-items CSS as these elements are being removed */
     .btn {
       display: inline-block;
       background: var(--gold);
@@ -375,10 +401,46 @@
         border-radius: 4px; /* Slight rounded corners */
     }
 
+    /* Big Head Wave Meditation Experience */
+    #meditationWave {
+        position: fixed;
+        width: 600px;
+        height: 600px;
+        background: radial-gradient(circle at 50% 50%, color-mix(in srgb, var(--color-two) 30%, transparent), transparent 70%);
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%) scale(1);
+        border-radius: 40% 60% 70% 30% / 30% 50% 50% 70%; /* Initial blob shape */
+        animation: meditateWave 18s ease-in-out infinite alternate,
+                   breatheScale 20s ease-in-out infinite alternate;
+        z-index: 0; /* Keep it in the background */
+        filter: blur(80px); /* Soft glow effect */
+        pointer-events: none; /* Ensure it doesn't interfere with clicks */
+    }
+
+    @keyframes meditateWave {
+        0% { border-radius: 40% 60% 70% 30% / 30% 50% 50% 70%; }
+        25% { border-radius: 60% 40% 30% 70% / 70% 30% 60% 40%; }
+        50% { border-radius: 70% 30% 40% 60% / 40% 60% 30% 70%; }
+        75% { border-radius: 30% 70% 60% 40% / 60% 40% 70% 30%; }
+        100% { border-radius: 40% 60% 70% 30% / 30% 50% 50% 70%; }
+    }
+
+    @keyframes breatheScale {
+        0% { transform: translate(-50%, -50%) scale(1); opacity: 0.7; }
+        50% { transform: translate(-50%, -50%) scale(1.05); opacity: 0.9; }
+        100% { transform: translate(-50%, -50%) scale(1); opacity: 0.7; }
+    }
+
     /* Responsive Tweaks */
     @media (max-width: 1024px) {
         .wrap {
             padding: 15px;
+        }
+        #meditationWave {
+            width: 500px;
+            height: 500px;
+            filter: blur(60px);
         }
     }
     @media (max-width: 768px) {
@@ -411,14 +473,6 @@
             padding: 3px 6px;
             margin: 15px 0 8px;
         }
-        .card .demo-items {
-            margin-bottom: 15px;
-        }
-        .card .demo-items p {
-            padding: 5px 8px;
-            font-size: 0.9em;
-            margin-bottom: 6px;
-        }
         #sun {
             width: 70px;
             height: 70px;
@@ -443,6 +497,11 @@
         }
         .wrap h2#services-heading {
             padding: 6px 12px; /* Adjusted padding */
+        }
+        #meditationWave {
+            width: 400px;
+            height: 400px;
+            filter: blur(50px);
         }
     }
     @media (max-width: 480px) {
@@ -485,14 +544,6 @@
             padding: 2px 5px;
             margin: 12px 0 6px;
         }
-        .card .demo-items {
-            margin-bottom: 12px;
-        }
-        .card .demo-items p {
-            font-size: 0.85em;
-            padding: 4px 6px;
-            margin-bottom: 5px;
-        }
         .btn {
             padding: 10px 15px;
             font-size: 0.9em;
@@ -505,7 +556,7 @@
             font-size: 0.9em;
             padding: 6px 10px;
         }
-        #sun, #india-map, #whiteBox { /* Also hide whiteBox on small screens */
+        #sun, #india-map, #whiteBox, #meditationWave { /* Also hide whiteBox and meditationWave on small screens */
             display: none; /* Hide decorative elements on very small screens */
         }
         .group h2 {
@@ -533,9 +584,15 @@
   <!-- New White Box -->
   <div id="whiteBox" aria-hidden="true"></div>
 
-  <!-- Premium Ribbon with Marquee Text -->
+  <!-- Big Head Wave Meditation Experience (added) -->
+  <div id="meditationWave" aria-hidden="true"></div>
+
+  <!-- Premium Ribbon with Marquee Text and Button -->
   <div class="premium-ribbon">
-    <div class="marquee" aria-live="off">do you wann learn everything i do follow digitalconfvision</div>
+    <div class="marquee-content">
+      <div class="marquee" aria-live="off">Elevate Your Energy, Elevate Your Impact!</div>
+    </div>
+    <button class="mini-ribbon-btn">read next</button>
   </div>
 
   <!-- Hero Section -->
@@ -564,12 +621,6 @@
 
           <h4>My Work Experience:</h4>
           <p>Successfully implemented AEO strategies for several e-commerce clients, resulting in an average 30% increase in featured snippet visibility and a 15% rise in traffic from voice search queries within six months.</p>
-
-          <h4>Demos:</h4>
-          <div class="demo-items">
-            <p><strong>Demo 1:</strong> Case Study: Improved featured snippet presence for a health & wellness blog by 40% using advanced schema markup and concise content structuring.</p>
-            <p><strong>Demo 2:</strong> Client Report: Achieved top rankings for "near me" voice search queries for a local restaurant chain, boosting online reservations by 22%.</p>
-          </div>
           <a class="btn" href="https://wa.me/919372035409?text=Hi%20Pritam!%20I'm%20interested%20in%20AEO%20%26%20Voice%20Search.%0A1.%20Do%20I%20understand%20search%20intent%3F%0A2.%20Am%20I%20optimizing%20for%20voice%3F%0A3.%20Can%20my%20site%20answer%20instantly%3F" target="_blank" rel="noopener noreferrer" aria-label="Request Answer Engine Optimization and Voice Search service via WhatsApp">💬 Request AEO</a>
         </article>
 
@@ -580,12 +631,6 @@
 
           <h4>My Work Experience:</h4>
           <p>Boosted local store visits by an average of 25% for a national retail chain through targeted local SEO and Google Business Profile optimization across 50+ locations, significantly improving regional market share.</p>
-
-          <h4>Demos:</h4>
-          <div class="demo-items">
-            <p><strong>Demo 1:</strong> Google Maps Ranking Improvement: Secured top 3 positions for "restaurant near me" queries in 3 major cities, leading to a 35% increase in calls and directions requests.</p>
-            <p><strong>Demo 2:</strong> Local Ad Campaign Report: Achieved a 20% increase in service calls for a plumbing company using geo-fenced mobile advertisements with precise targeting.</p>
-          </div>
           <a class="btn" href="https://wa.me/919372035409?text=Hi%20Pritam!%20I'm%20interested%20in%20GEO%20Targeting.%0A1.%20Am%20I%20visible%20to%20local%20customers%3F%0A2.%20Do%20I%20use%20GBP%3F%0A3.%20Is%20my%20content%20localized%3F" target="_blank" rel="noopener noreferrer" aria-label="Request Geo-Targeting and Local Growth service via WhatsApp">📍 Request GEO</a>
         </article>
 
@@ -596,12 +641,6 @@
 
           <h4>My Work Experience:</h4>
           <p>Designed and implemented an end-to-end WhatsApp funnel for an education platform, which successfully converted 20% more leads into course registrations within just three months.</p>
-
-          <h4>Demos:</h4>
-          <div class="demo-items">
-            <p><strong>Demo 1:</strong> WhatsApp Bot Flow Diagram: Developed an automated onboarding sequence for a SaaS product, reducing manual lead qualification by 60% and improving user activation.</p>
-            <p><strong>Demo 2:</strong> Chatbot Performance Metrics: Achieved an 85% customer query resolution rate with an AI-powered support chatbot, significantly offloading human agents.</p>
-          </div>
           <a class="btn" href="https://wa.me/919372035409?text=Hi%20Pritam!%20Let's%20build%20WhatsApp%20Funnels.%0A1.%20Do%20I%20automate%20follow-ups%3F%0A2.%20Are%20leads%20qualified%3F%0A3.%20Can%20we%20book%20calls%20automatically%3F" target="_blank" rel="noopener noreferrer" aria-label="Build WhatsApp Funnels service via WhatsApp">💬 Build Funnels</a>
         </article>
 
@@ -612,12 +651,6 @@
 
           <h4>My Work Experience:</h4>
           <p>Orchestrated several influencer campaigns for a direct-to-consumer (DTC) fashion brand, consistently generating a 5X return on investment (ROI) by strategically engaging micro-influencers.</p>
-
-          <h4>Demos:</h4>
-          <div class="demo-items">
-            <p><strong>Demo 1:</strong> Influencer Campaign Report: Achieved 1.5 million reach and 10,000 product sales for a beauty brand through a meticulously managed cohort of 50 micro-influencers.</p>
-            <p><strong>Demo 2:</strong> UGC Library Example: Curated a library of 200+ high-quality UGC assets from a creator campaign, which were successfully repurposed in high-performing paid advertisements.</p>
-          </div>
           <a class="btn" href="https://wa.me/919372035409?text=Hi%20Pritam!%20I'm%20interested%20in%20Creator%20Commerce.%0A1.%20Do%20I%20use%20UGC%3F%0A2.%20Am%20I%20running%20strategic%20collabs%3F%0A3.%20Can%20we%20monetize%20creators%3F" target="_blank" rel="noopener noreferrer" aria-label="Request Creator Commerce and Influencer Partnerships service via WhatsApp">🤝 Request Creator</a>
         </article>
 
@@ -628,12 +661,6 @@
 
           <h4>My Work Experience:</h4>
           <p>Redesigned a complex checkout flow for a major e-commerce client based on comprehensive heatmap analysis and rigorous A/B testing, which resulted in an 18% increase in their overall conversion rates.</p>
-
-          <h4>Demos:</h4>
-          <div class="demo-items">
-            <p><strong>Demo 1:</strong> CRO Audit Report: Conducted a detailed audit for a SaaS landing page, identifying 10+ key areas for improvement with a projected increase in conversions by 15%.</p>
-            <p><strong>Demo 2:</strong> First-Party Data Implementation Plan: Developed a comprehensive strategy for collecting and ethically utilizing consented first-party data for a large publishing client, enhancing audience segmentation.</p>
-          </div>
           <a class="btn" href="https://wa.me/919372035409?text=Hi%20Pritam!%20I%20want%20a%20CRO%20audit.%0A1.%20Do%20I%20own%20my%20data%3F%0A2.%20Do%20I%20test%20regularly%3F%0A3.%20Do%20I%20use%20heatmaps%3F" target="_blank" rel="noopener noreferrer" aria-label="Request Data, Privacy-First Analytics and CRO audit via WhatsApp">📊 Request CRO</a>
         </article>
 
@@ -644,12 +671,6 @@
 
           <h4>My Work Experience:</h4>
           <p>Managed over $500k in monthly ad spend across Meta and X platforms for diverse clients, consistently achieving and exceeding target ROAS benchmarks in highly competitive industries.</p>
-
-          <h4>Demos:</h4>
-          <div class="demo-items">
-            <p><strong>Demo 1:</strong> Paid Social Campaign Results: Achieved a 25% improvement in ROAS for an apparel brand by implementing advanced lookalike audiences and dynamic creative optimization techniques.</p>
-            <p><strong>Demo 2:</strong> Programmatic Ad Placement Report: Delivered a successful brand awareness campaign with 90% viewability and a 5% engagement rate through strategic programmatic buys across premium inventory.</p>
-          </div>
           <a class="btn" href="https://wa.me/919372035409?text=Hi%20Pritam!%20Let's%20scale%20Paid%20Social.%0A1.%20Am%20I%20tracking%20ROAS%3F%0A2.%20Is%20budget%20allocated%3F%0A3.%20Do%20I%20A-B%20test%3F" target="_blank" rel="noopener noreferrer" aria-label="Request Programmatic and Paid Social service via WhatsApp">🚀 Request Paid Social</a>
         </article>
 
@@ -660,12 +681,6 @@
 
           <h4>My Work Experience:</h4>
           <p>Increased organic traffic by 60% year-over-year for a content-heavy client in the education sector by implementing robust content clusters and resolving critical technical SEO issues.</p>
-
-          <h4>Demos:</h4>
-          <div class="demo-items">
-            <p><strong>Demo 1:</strong> Technical SEO Audit: Identified and resolved over 15 critical crawlability and indexability issues for a large e-commerce site, leading to 20% more indexed product pages.</p>
-            <p><strong>Demo 2:</strong> Visual Search Optimization Strategy: Optimized product images and videos for a fashion retailer, resulting in a 10% increase in traffic directly from Google Images and Pinterest Lens.</p>
-          </div>
           <a class="btn" href="https://wa.me/919372035409?text=Hi%20Pritam!%20Let's%20audit%20SEO.%0A1.%20Are%20pages%20indexed%3F%0A2.%20Do%20I%20optimize%20images%3F%0A3.%20Do%20I%20have%20content%20clusters%3F" target="_blank" rel="noopener noreferrer" aria-label="Request SEO and Visual Search audit via WhatsApp">🔍 Request SEO</a>
         </article>
 
@@ -676,12 +691,6 @@
 
           <h4>My Work Experience:</h4>
           <p>Implemented a comprehensive email automation series for a SaaS company, improving free-to-paid conversion rates by 12% and successfully reducing customer churn by 8% within six months.</p>
-
-          <h4>Demos:</h4>
-          <div class="demo-items">
-            <p><strong>Demo 1:</strong> Abandoned Cart Recovery Funnel: Designed and deployed a 3-part email sequence with dynamic product content, leading to a 15% reduction in cart abandonment rates.</p>
-            <p><strong>Demo 2:</strong> Customer Onboarding Journey Map: Developed a 7-day automated email series for new users of a mobile app, significantly boosting product adoption and feature engagement.</p>
-          </div>
           <a class="btn" href="https://wa.me/919372035409?text=Hi%20Pritam!%20I%20need%20email%20automation.%0A1.%20Do%20I%20nurture%20leads%3F%0A2.%20Do%20I%20segment%3F%0A3.%20Am%20I%20recovering%20carts%3F" target="_blank" rel="noopener noreferrer" aria-label="Request Email Automation and Lifecycle Marketing service via WhatsApp">📧 Request Email</a>
         </article>
 
@@ -691,13 +700,7 @@
           <p><strong>How to leverage it to scale your business?</strong> By adopting Live Commerce, you create a direct, highly engaging sales channel that builds stronger customer relationships and drives immediate sales during live events. Community growth strategies foster loyalty, gather real-time feedback, and transform customers into advocates, leading to exponential brand expansion and sustained revenue streams.</p>
 
           <h4>My Work Experience:</h4>
-          <p>Hosted and managed a series of highly successful live shopping events for a beauty brand, generating over $50k in sales from a single event and growing their engaged online community by 30%.</p>
-
-          <h4>Demos:</h4>
-          <div class="demo-items">
-            <p><strong>Demo 1:</strong> Live Stream Sales Report: Analyzed performance metrics from a major product launch live stream, demonstrating a 20% conversion rate among viewers during the event.</p>
-            <p><strong>Demo 2:</strong> Community Engagement Strategy: Developed a comprehensive content and moderation plan for a brand's exclusive online community, resulting in a 50% higher member activity rate and increased UGC.</p>
-          </div>
+          <p>Hosted and managed a series of highly successful live shopping events for a beauty brand, generating over $50k in sales from a single event and growing their engaged online community by 30% deep learners.</p>
           <a class="btn" href="https://wa.me/919372035409?text=Hi%20Pritam!%20I%20want%20Live%20Commerce.%0A1.%20Do%20I%20have%20an%20engaged%20community%3F%0A2.%20Do%20I%20run%20live%20sessions%3F%0A3.%20Is%20community%20monetized%3F" target="_blank" rel="noopener noreferrer" aria-label="Request Live Commerce and Community Growth service via WhatsApp">🎥 Request Community</a>
         </article>
 
