Add Viral Reel Ideas product card and update description
Added a new product card for 'Viral Reel Ideas' to promote Instagram growth strategies and updated a description for WhatsApp funnel service.

--- a/index.html
+++ b/index.html
@@ -614,6 +614,14 @@
       <h2 id="services-heading" style="text-align:center;color:var(--heading-color);">Digital Marketing — Request Service</h2>
       <div class="grid">
 
+        <!-- New Product Card: Viral Reel Ideas -->
+        <article class="card">
+          <h3>Viral Reel Ideas: Why My Instagram Followers Not Growing?</h3>
+          <img src="https://i.ibb.co/bgpmQWsj/box-image-1.jpg" alt="Viral Reel Ideas Product" style="width: 100%; height: 200px; object-fit: cover; border-radius: 8px; margin-bottom: 15px;">
+          <p>Unlock the secrets to Instagram growth with this comprehensive guide. Learn how to generate viral reel ideas and overcome common hurdles preventing your follower count from soaring. Get actionable strategies, creative prompts, and proven tactics to boost your reach and engagement.</p>
+          <a class="btn" href="https://wa.me/919372035409?text=Hi%20Pritam!%20I'm%20interested%20in%20the%20'Viral%20Reel%20Ideas'%20product." target="_blank" rel="noopener noreferrer" aria-label="Request information about 'Viral Reel Ideas' product via WhatsApp">🚀 Get Viral Reel Ideas</a>
+        </article>
+
         <article class="card">
           <h3>Answer Engine Optimization (AEO) & Voice Search</h3>
           <p><strong>What is AEO & Voice Search?</strong> AEO involves optimizing your content to directly answer user queries, making it highly discoverable for featured snippets, 'People Also Ask' sections, and voice assistants. It's about providing immediate, concise, and relevant answers to searchers' precise questions.</p>
@@ -640,7 +648,7 @@
           <p><strong>How to leverage it to scale your business?</strong> By streamlining customer interactions with Conversational AI, you reduce response times, improve customer satisfaction, and convert prospects more efficiently. Automated WhatsApp funnels provide personalized, instant communication at scale, drastically improving lead generation and sales conversions.</p>
 
           <h4>My Work Experience:</h4>
-          <p>Designed and implemented an end-to-end WhatsApp funnel for an education platform, which successfully converted 20% more leads into course registrations within just three months.</p>
+          <p>Designed and implemented an-end-to-end WhatsApp funnel for an education platform, which successfully converted 20% more leads into course registrations within just three months.</p>
           <a class="btn" href="https://wa.me/919372035409?text=Hi%20Pritam!%20Let's%20build%20WhatsApp%20Funnels.%0A1.%20Do%20I%20automate%20follow-ups%3F%0A2.%20Are%20leads%20qualified%3F%0A3.%20Can%20we%20book%20calls%20automatically%3F" target="_blank" rel="noopener noreferrer" aria-label="Build WhatsApp Funnels service via WhatsApp">💬 Build Funnels</a>
         </article>
 
