Add Guayru product card to index.html
Added a new product card for 'Guayru', including a description and a purchase link.

--- a/index.html
+++ b/index.html
@@ -712,6 +712,14 @@
           <a class="btn" href="https://wa.me/919372035409?text=Hi%20Pritam!%20I%20want%20Live%20Commerce.%0A1.%20Do%20I%20have%20an%20engaged%20community%3F%0A2.%20Do%20I%20run%20live%20sessions%3F%0A3.%20Is%20community%20monetized%3F" target="_blank" rel="noopener noreferrer" aria-label="Request Live Commerce and Community Growth service via WhatsApp">🎥 Request Community</a>
         </article>
 
+        <!-- New Product Card: Guayru -->
+        <article class="card">
+          <h3>Guayru: Exclusive Digital Product</h3>
+          <img src="https://i.ibb.co/bgpmQWsj/box-image-1.jpg" alt="Guayru Digital Product" style="width: 100%; height: 200px; object-fit: cover; border-radius: 8px; margin-bottom: 15px;">
+          <p>Discover 'Guayru', an exclusive digital product designed to accelerate your growth. This comprehensive guide provides actionable insights and strategies to help you achieve your goals faster. Don't miss out on this opportunity to elevate your journey.</p>
+          <a class="btn" href="https://prityaa379.gumroad.com/l/guayru" target="_blank" rel="noopener noreferrer" aria-label="Buy Guayru digital product for 80 rupees">💰 Buy in 80 rupees</a>
+        </article>
+
       </div>
     </section>
 
